fix: icon logo and delete setTimeout in hook useCollapsed

--- a/src/components/layout/Sider/CustomSider.module.css
+++ b/src/components/layout/Sider/CustomSider.module.css
@@ -1,5 +1,5 @@
 .logo {
-    height: 64px;
+    padding: 14px 46px 17px 29px;
 }
 
 .icon {
